--- a/test/e2e/suite/BUILD.bazel
+++ b/test/e2e/suite/BUILD.bazel
@@ -8,6 +8,7 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//test/e2e/suite/conformance:go_default_library",
+        "//test/e2e/suite/identity:go_default_library",
         "//test/e2e/suite/issuers:go_default_library",
         "//test/e2e/suite/serving:go_default_library",
     ],
@@ -25,6 +26,7 @@ filegroup(
     srcs = [
         ":package-srcs",
         "//test/e2e/suite/conformance:all-srcs",
+        "//test/e2e/suite/identity:all-srcs",
         "//test/e2e/suite/issuers:all-srcs",
         "//test/e2e/suite/serving:all-srcs",
     ],
