Updates CertificateRequest controllers to user new Issuer response, and shared issuer client
Signed-off-by: joshvanl <vleeuwenjoshua@gmail.com>

--- a/pkg/controller/certificaterequests/BUILD.bazel
+++ b/pkg/controller/certificaterequests/BUILD.bazel
@@ -18,8 +18,8 @@ go_library(
         "//pkg/client/listers/certmanager/v1:go_default_library",
         "//pkg/controller:go_default_library",
         "//pkg/controller/certificaterequests/util:go_default_library",
+        "//pkg/controller/internal/issuers:go_default_library",
         "//pkg/internal/apis/certmanager:go_default_library",
-        "//pkg/issuer:go_default_library",
         "//pkg/logs:go_default_library",
         "//pkg/util/pki:go_default_library",
         "//pkg/webhook:go_default_library",
@@ -45,10 +45,10 @@ go_test(
         "//pkg/apis/certmanager/v1:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
         "//pkg/controller/certificaterequests/fake:go_default_library",
+        "//pkg/controller/internal/issuers:go_default_library",
+        "//pkg/controller/internal/issuers/fake:go_default_library",
+        "//pkg/controller/issuers/selfsigned:go_default_library",
         "//pkg/controller/test:go_default_library",
-        "//pkg/issuer:go_default_library",
-        "//pkg/issuer/fake:go_default_library",
-        "//pkg/issuer/selfsigned:go_default_library",
         "//pkg/util/pki:go_default_library",
         "//test/unit/gen:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
