--- a/pkg/controller/certificaterequests/fake/BUILD.bazel
+++ b/pkg/controller/certificaterequests/fake/BUILD.bazel
@@ -5,10 +5,7 @@ go_library(
     srcs = ["fake.go"],
     importpath = "github.com/jetstack/cert-manager/pkg/controller/certificaterequests/fake",
     visibility = ["//visibility:public"],
-    deps = [
-        "//pkg/apis/certmanager/v1:go_default_library",
-        "//pkg/issuer:go_default_library",
-    ],
+    deps = ["//pkg/apis/certmanager/v1:go_default_library"],
 )
 
 filegroup(
