--- a/pkg/controller/certificaterequests/venafi/BUILD.bazel
+++ b/pkg/controller/certificaterequests/venafi/BUILD.bazel
@@ -12,9 +12,8 @@ go_library(
         "//pkg/controller:go_default_library",
         "//pkg/controller/certificaterequests:go_default_library",
         "//pkg/controller/certificaterequests/util:go_default_library",
-        "//pkg/issuer:go_default_library",
-        "//pkg/issuer/venafi/client:go_default_library",
-        "//pkg/issuer/venafi/client/api:go_default_library",
+        "//pkg/internal/venafi:go_default_library",
+        "//pkg/internal/venafi/api:go_default_library",
         "//pkg/logs:go_default_library",
         "@com_github_venafi_vcert_v4//pkg/endpoint:go_default_library",
         "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
@@ -48,9 +47,9 @@ go_test(
         "//pkg/apis/meta/v1:go_default_library",
         "//pkg/controller/certificaterequests:go_default_library",
         "//pkg/controller/test:go_default_library",
-        "//pkg/issuer/venafi/client:go_default_library",
-        "//pkg/issuer/venafi/client/api:go_default_library",
-        "//pkg/issuer/venafi/client/fake:go_default_library",
+        "//pkg/internal/venafi:go_default_library",
+        "//pkg/internal/venafi/api:go_default_library",
+        "//pkg/internal/venafi/fake:go_default_library",
         "//pkg/util/pki:go_default_library",
         "//test/unit/gen:go_default_library",
         "//test/unit/listers:go_default_library",
