Updates acmechallenges controller to use new shared internal issuer client and new acme import paths
Signed-off-by: joshvanl <vleeuwenjoshua@gmail.com>

--- a/pkg/controller/acmechallenges/BUILD.bazel
+++ b/pkg/controller/acmechallenges/BUILD.bazel
@@ -19,12 +19,12 @@ go_library(
         "//pkg/client/listers/acme/v1:go_default_library",
         "//pkg/client/listers/certmanager/v1:go_default_library",
         "//pkg/controller:go_default_library",
+        "//pkg/controller/acmechallenges/dns:go_default_library",
+        "//pkg/controller/acmechallenges/dns/util:go_default_library",
+        "//pkg/controller/acmechallenges/http:go_default_library",
         "//pkg/controller/acmechallenges/scheduler:go_default_library",
+        "//pkg/controller/internal/issuers:go_default_library",
         "//pkg/feature:go_default_library",
-        "//pkg/issuer:go_default_library",
-        "//pkg/issuer/acme/dns:go_default_library",
-        "//pkg/issuer/acme/dns/util:go_default_library",
-        "//pkg/issuer/acme/http:go_default_library",
         "//pkg/logs:go_default_library",
         "//pkg/util/feature:go_default_library",
         "@com_github_go_logr_logr//:go_default_library",
@@ -51,7 +51,6 @@ go_test(
         "//pkg/apis/certmanager/v1:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
         "//pkg/controller/test:go_default_library",
-        "//pkg/issuer:go_default_library",
         "//test/unit/gen:go_default_library",
         "@io_k8s_apimachinery//pkg/runtime:go_default_library",
         "@io_k8s_client_go//testing:go_default_library",
@@ -70,6 +69,8 @@ filegroup(
     name = "all-srcs",
     srcs = [
         ":package-srcs",
+        "//pkg/controller/acmechallenges/dns:all-srcs",
+        "//pkg/controller/acmechallenges/http:all-srcs",
         "//pkg/controller/acmechallenges/scheduler:all-srcs",
     ],
     tags = ["automanaged"],
