fix: correct permissions on edit aggregate role
Signed-off-by: Yann Soubeyrand <yann.soubeyrand@camptocamp.com>

--- a/deploy/charts/cert-manager/templates/rbac.yaml
+++ b/deploy/charts/cert-manager/templates/rbac.yaml
@@ -452,6 +452,6 @@ rules:
     verbs: ["create", "delete", "deletecollection", "patch", "update"]
   - apiGroups: ["acme.cert-manager.io"]
     resources: ["challenges", "orders"]
-    verbs: ["get", "list", "watch"]
+    verbs: ["create", "delete", "deletecollection", "patch", "update"]
 
 {{- end }}
