Updates Trigger controller integration tests
Signed-off-by: irbekrm <irbekrm@gmail.com>

--- a/pkg/controller/certificates/trigger/policies/BUILD.bazel
+++ b/pkg/controller/certificates/trigger/policies/BUILD.bazel
@@ -18,6 +18,7 @@ go_library(
         "//pkg/util/predicate:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
+        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/labels:go_default_library",
         "@io_k8s_client_go//listers/core/v1:go_default_library",
         "@io_k8s_utils//clock:go_default_library",
