--- a/pkg/controller/issuers/venafi/BUILD.bazel
+++ b/pkg/controller/issuers/venafi/BUILD.bazel
@@ -27,8 +27,14 @@ go_test(
         "//pkg/apis/acme/v1:go_default_library",
         "//pkg/apis/certmanager/v1:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
+        "//pkg/controller:go_default_library",
+        "//pkg/controller/test:go_default_library",
+        "//pkg/internal/venafi:go_default_library",
+        "//pkg/internal/venafi/fake:go_default_library",
+        "//pkg/util:go_default_library",
         "//test/unit/gen:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
+        "@io_k8s_client_go//listers/core/v1:go_default_library",
     ],
 )
 
