Refactor readiness controller for easier testing
Signed-off-by: irbekrm <irbekrm@gmail.com>

--- a/pkg/controller/certificates/readiness/BUILD.bazel
+++ b/pkg/controller/certificates/readiness/BUILD.bazel
@@ -27,6 +27,7 @@ go_library(
         "@io_k8s_client_go//listers/core/v1:go_default_library",
         "@io_k8s_client_go//tools/cache:go_default_library",
         "@io_k8s_client_go//util/workqueue:go_default_library",
+        "@io_k8s_utils//clock:go_default_library",
     ],
 )
 
