--- a/pkg/controller/certificates/readiness/BUILD.bazel
+++ b/pkg/controller/certificates/readiness/BUILD.bazel
@@ -54,9 +54,9 @@ go_test(
         "//pkg/apis/meta/v1:go_default_library",
         "//pkg/controller:go_default_library",
         "//pkg/controller/certificates:go_default_library",
+        "//pkg/controller/certificates/internal/test:go_default_library",
         "//pkg/controller/certificates/trigger/policies:go_default_library",
         "//pkg/controller/test:go_default_library",
-        "//pkg/util/pki:go_default_library",
         "//test/unit/gen:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
