--- a/pkg/controller/certificates/trigger/policies/BUILD.bazel
+++ b/pkg/controller/certificates/trigger/policies/BUILD.bazel
@@ -32,18 +32,21 @@ go_test(
     ],
     embed = [":go_default_library"],
     deps = [
+        "//pkg/api:go_default_library",
         "//pkg/apis/certmanager/v1:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
-        "//pkg/client/listers/certmanager/v1:go_default_library",
         "//pkg/controller/certificates/internal/test:go_default_library",
+        "//pkg/controller/test:go_default_library",
+        "//pkg/logs:go_default_library",
+        "//pkg/logs/testing:go_default_library",
         "//test/unit/gen:go_default_library",
-        "//test/unit/listers:go_default_library",
         "@com_github_stretchr_testify//assert:go_default_library",
         "@com_github_stretchr_testify//require:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
-        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
-        "@io_k8s_apimachinery//pkg/labels:go_default_library",
+        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
+        "@io_k8s_client_go//tools/cache:go_default_library",
+        "@io_k8s_klog_v2//:go_default_library",
         "@io_k8s_utils//clock/testing:go_default_library",
     ],
 )
