--- a/pkg/controller/certificates/trigger/policies/BUILD.bazel
+++ b/pkg/controller/certificates/trigger/policies/BUILD.bazel
@@ -45,6 +45,7 @@ go_test(
         "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/runtime:go_default_library",
+        "@io_k8s_client_go//kubernetes/scheme:go_default_library",
         "@io_k8s_client_go//tools/cache:go_default_library",
         "@io_k8s_klog_v2//:go_default_library",
         "@io_k8s_utils//clock/testing:go_default_library",
