Updates the base CertificateRequest controller to first check for the approval condition to be present and set to true, before processing further
Signed-off-by: joshvanl <vleeuwenjoshua@gmail.com>

--- a/pkg/controller/certificaterequests/BUILD.bazel
+++ b/pkg/controller/certificaterequests/BUILD.bazel
@@ -68,6 +68,7 @@ filegroup(
     srcs = [
         ":package-srcs",
         "//pkg/controller/certificaterequests/acme:all-srcs",
+        "//pkg/controller/certificaterequests/approver:all-srcs",
         "//pkg/controller/certificaterequests/ca:all-srcs",
         "//pkg/controller/certificaterequests/fake:all-srcs",
         "//pkg/controller/certificaterequests/selfsigned:all-srcs",
