Adds API generated code
Signed-off-by: joshvanl <vleeuwenjoshua@gmail.com>

--- a/pkg/internal/BUILD.bazel
+++ b/pkg/internal/BUILD.bazel
@@ -13,6 +13,7 @@ filegroup(
         "//pkg/internal/apis/acme:all-srcs",
         "//pkg/internal/apis/certmanager:all-srcs",
         "//pkg/internal/apis/meta:all-srcs",
+        "//pkg/internal/apis/policy:all-srcs",
         "//pkg/internal/vault:all-srcs",
     ],
     tags = ["automanaged"],
