Adds CertificateRequestPolicy client generated code
Signed-off-by: joshvanl <vleeuwenjoshua@gmail.com>

--- a/pkg/client/informers/externalversions/BUILD.bazel
+++ b/pkg/client/informers/externalversions/BUILD.bazel
@@ -17,10 +17,12 @@ go_library(
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
         "//pkg/apis/certmanager/v1alpha3:go_default_library",
         "//pkg/apis/certmanager/v1beta1:go_default_library",
+        "//pkg/apis/policy/v1alpha1:go_default_library",
         "//pkg/client/clientset/versioned:go_default_library",
         "//pkg/client/informers/externalversions/acme:go_default_library",
         "//pkg/client/informers/externalversions/certmanager:go_default_library",
         "//pkg/client/informers/externalversions/internalinterfaces:go_default_library",
+        "//pkg/client/informers/externalversions/policy:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/runtime:go_default_library",
         "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
@@ -42,6 +44,7 @@ filegroup(
         "//pkg/client/informers/externalversions/acme:all-srcs",
         "//pkg/client/informers/externalversions/certmanager:all-srcs",
         "//pkg/client/informers/externalversions/internalinterfaces:all-srcs",
+        "//pkg/client/informers/externalversions/policy:all-srcs",
     ],
     tags = ["automanaged"],
     visibility = ["//visibility:public"],
