--- a/pkg/client/clientset/versioned/BUILD.bazel
+++ b/pkg/client/clientset/versioned/BUILD.bazel
@@ -17,6 +17,7 @@ go_library(
         "//pkg/client/clientset/versioned/typed/certmanager/v1alpha2:go_default_library",
         "//pkg/client/clientset/versioned/typed/certmanager/v1alpha3:go_default_library",
         "//pkg/client/clientset/versioned/typed/certmanager/v1beta1:go_default_library",
+        "//pkg/client/clientset/versioned/typed/policy/v1alpha1:go_default_library",
         "@io_k8s_client_go//discovery:go_default_library",
         "@io_k8s_client_go//rest:go_default_library",
         "@io_k8s_client_go//util/flowcontrol:go_default_library",
@@ -44,6 +45,7 @@ filegroup(
         "//pkg/client/clientset/versioned/typed/certmanager/v1alpha2:all-srcs",
         "//pkg/client/clientset/versioned/typed/certmanager/v1alpha3:all-srcs",
         "//pkg/client/clientset/versioned/typed/certmanager/v1beta1:all-srcs",
+        "//pkg/client/clientset/versioned/typed/policy/v1alpha1:all-srcs",
     ],
     tags = ["automanaged"],
     visibility = ["//visibility:public"],
