--- a/pkg/client/clientset/versioned/fake/BUILD.bazel
+++ b/pkg/client/clientset/versioned/fake/BUILD.bazel
@@ -18,6 +18,7 @@ go_library(
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
         "//pkg/apis/certmanager/v1alpha3:go_default_library",
         "//pkg/apis/certmanager/v1beta1:go_default_library",
+        "//pkg/apis/policy/v1alpha1:go_default_library",
         "//pkg/client/clientset/versioned:go_default_library",
         "//pkg/client/clientset/versioned/typed/acme/v1:go_default_library",
         "//pkg/client/clientset/versioned/typed/acme/v1/fake:go_default_library",
@@ -35,6 +36,8 @@ go_library(
         "//pkg/client/clientset/versioned/typed/certmanager/v1alpha3/fake:go_default_library",
         "//pkg/client/clientset/versioned/typed/certmanager/v1beta1:go_default_library",
         "//pkg/client/clientset/versioned/typed/certmanager/v1beta1/fake:go_default_library",
+        "//pkg/client/clientset/versioned/typed/policy/v1alpha1:go_default_library",
+        "//pkg/client/clientset/versioned/typed/policy/v1alpha1/fake:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/runtime:go_default_library",
         "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
