--- a/pkg/client/clientset/versioned/scheme/BUILD.bazel
+++ b/pkg/client/clientset/versioned/scheme/BUILD.bazel
@@ -17,6 +17,7 @@ go_library(
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
         "//pkg/apis/certmanager/v1alpha3:go_default_library",
         "//pkg/apis/certmanager/v1beta1:go_default_library",
+        "//pkg/apis/policy/v1alpha1:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/runtime:go_default_library",
         "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
