--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -77,6 +77,7 @@ filegroup(
         "//pkg/client/listers/certmanager/v1alpha2:all-srcs",
         "//pkg/client/listers/certmanager/v1alpha3:all-srcs",
         "//pkg/client/listers/certmanager/v1beta1:all-srcs",
+        "//pkg/client/listers/policy/v1alpha1:all-srcs",
         "//pkg/controller:all-srcs",
         "//pkg/ctl:all-srcs",
         "//pkg/feature:all-srcs",
@@ -84,6 +85,7 @@ filegroup(
         "//pkg/issuer:all-srcs",
         "//pkg/logs:all-srcs",
         "//pkg/metrics:all-srcs",
+        "//pkg/policy:all-srcs",
         "//pkg/scheduler:all-srcs",
         "//pkg/util:all-srcs",
         "//pkg/webhook:all-srcs",
