--- a/cmd/controller/app/options/BUILD.bazel
+++ b/cmd/controller/app/options/BUILD.bazel
@@ -19,6 +19,7 @@ go_library(
         "//pkg/controller/certificates/metrics:go_default_library",
         "//pkg/controller/certificates/readiness:go_default_library",
         "//pkg/controller/certificates/requestmanager:go_default_library",
+        "//pkg/controller/certificates/revisionmanager:go_default_library",
         "//pkg/controller/certificates/trigger:go_default_library",
         "//pkg/controller/clusterissuers:go_default_library",
         "//pkg/controller/ingress-shim:go_default_library",
