--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -93,6 +93,7 @@ filegroup(
         "//test/unit/coreclients:all-srcs",
         "//test/unit/gen:all-srcs",
         "//test/unit/listers:all-srcs",
+        "//test/utils:all-srcs",
         "//tools/cobra:all-srcs",
     ],
     tags = ["automanaged"],
