--- a/test/e2e/suite/approval/BUILD.bazel
+++ b/test/e2e/suite/approval/BUILD.bazel
@@ -2,10 +2,15 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = ["certificaterequests.go"],
-    importpath = "github.com/jetstack/cert-manager/test/e2e/suite/identity",
+    srcs = [
+        "approval.go",
+        "userinfo.go",
+    ],
+    importpath = "github.com/jetstack/cert-manager/test/e2e/suite/approval",
     visibility = ["//visibility:public"],
     deps = [
+        "//pkg/api/util:go_default_library",
+        "//pkg/apis/certmanager/v1:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
         "//pkg/client/clientset/versioned:go_default_library",
         "//pkg/util:go_default_library",
