--- a/pkg/controller/certificates/revisionmanager/BUILD.bazel
+++ b/pkg/controller/certificates/revisionmanager/BUILD.bazel
@@ -20,6 +20,7 @@ go_library(
         "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/labels:go_default_library",
+        "@io_k8s_apimachinery//pkg/types:go_default_library",
         "@io_k8s_client_go//tools/cache:go_default_library",
         "@io_k8s_client_go//util/workqueue:go_default_library",
     ],
@@ -52,6 +53,7 @@ go_test(
         "//test/unit/gen:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/runtime:go_default_library",
+        "@io_k8s_apimachinery//pkg/types:go_default_library",
         "@io_k8s_client_go//testing:go_default_library",
     ],
 )
