--- a/pkg/issuer/acme/http/BUILD.bazel
+++ b/pkg/issuer/acme/http/BUILD.bazel
@@ -5,6 +5,7 @@ go_library(
     srcs = [
         "http.go",
         "ingress.go",
+        "istio.go",
         "pod.go",
         "service.go",
     ],
@@ -14,9 +15,11 @@ go_library(
         "//pkg/apis/acme/v1:go_default_library",
         "//pkg/apis/certmanager/v1:go_default_library",
         "//pkg/controller:go_default_library",
+        "//pkg/issuer/acme/http/internal/istio:go_default_library",
         "//pkg/issuer/acme/http/solver:go_default_library",
         "//pkg/logs:go_default_library",
         "//pkg/util:go_default_library",
+        "@io_istio_api//networking/v1beta1:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_api//networking/v1beta1:go_default_library",
         "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
@@ -25,6 +28,7 @@ go_library(
         "@io_k8s_apimachinery//pkg/selection:go_default_library",
         "@io_k8s_apimachinery//pkg/util/errors:go_default_library",
         "@io_k8s_apimachinery//pkg/util/intstr:go_default_library",
+        "@io_k8s_client_go//dynamic/dynamiclister:go_default_library",
         "@io_k8s_client_go//listers/core/v1:go_default_library",
         "@io_k8s_client_go//listers/networking/v1beta1:go_default_library",
         "@io_k8s_utils//net:go_default_library",
@@ -36,6 +40,7 @@ go_test(
     srcs = [
         "http_test.go",
         "ingress_test.go",
+        "istio_test.go",
         "pod_test.go",
         "service_test.go",
         "util_test.go",
@@ -44,6 +49,7 @@ go_test(
     deps = [
         "//pkg/apis/acme/v1:go_default_library",
         "//pkg/controller/test:go_default_library",
+        "//pkg/issuer/acme/http/internal/istio:go_default_library",
         "//test/unit/gen:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_api//networking/v1beta1:go_default_library",
@@ -68,6 +74,7 @@ filegroup(
     name = "all-srcs",
     srcs = [
         ":package-srcs",
+        "//pkg/issuer/acme/http/internal/istio:all-srcs",
         "//pkg/issuer/acme/http/solver:all-srcs",
     ],
     tags = ["automanaged"],
