--- a/test/e2e/suite/issuers/acme/certificaterequest/BUILD.bazel
+++ b/test/e2e/suite/issuers/acme/certificaterequest/BUILD.bazel
@@ -4,7 +4,8 @@ go_library(
     name = "go_default_library",
     srcs = [
         "dns01.go",
-        "http01.go",
+        "http01_ingress.go",
+        "http01_istio.go",
     ],
     importpath = "github.com/jetstack/cert-manager/test/e2e/suite/issuers/acme/certificaterequest",
     visibility = ["//visibility:public"],
