--- a/cmd/controller/app/BUILD.bazel
+++ b/cmd/controller/app/BUILD.bazel
@@ -23,7 +23,6 @@ go_library(
         "//pkg/controller/issuers:go_default_library",
         "//pkg/issuer/acme:go_default_library",
         "//pkg/issuer/acme/dns/util:go_default_library",
-        "//pkg/issuer/acme/http/internal/istio:go_default_library",
         "//pkg/issuer/ca:go_default_library",
         "//pkg/issuer/selfsigned:go_default_library",
         "//pkg/issuer/vault:go_default_library",
@@ -32,9 +31,9 @@ go_library(
         "//pkg/metrics:go_default_library",
         "//pkg/util:go_default_library",
         "//pkg/util/feature:go_default_library",
+        "//pkg/util/istio:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
-        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
         "@io_k8s_apimachinery//pkg/api/resource:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/util/errors:go_default_library",
