Revert "Merge pull request #3724 from inteon/istio-virtualservice-for-http01"
This reverts commit 80f27739b59884a229bc4a31e3f9867429972d00, reversing
changes made to 96604d02a315f8f976063ed3a0019ab485bcd07c.

Signed-off-by: Richard Wall <richard.wall@jetstack.io>

--- a/test/e2e/suite/issuers/acme/BUILD.bazel
+++ b/test/e2e/suite/issuers/acme/BUILD.bazel
@@ -16,6 +16,7 @@ go_library(
         "//pkg/apis/meta/v1:go_default_library",
         "//test/e2e/framework:go_default_library",
         "//test/e2e/suite/issuers/acme/certificate:go_default_library",
+        "//test/e2e/suite/issuers/acme/certificaterequest:go_default_library",
         "//test/e2e/util:go_default_library",
         "//test/unit/gen:go_default_library",
         "@com_github_onsi_ginkgo//:go_default_library",
@@ -37,6 +38,7 @@ filegroup(
     srcs = [
         ":package-srcs",
         "//test/e2e/suite/issuers/acme/certificate:all-srcs",
+        "//test/e2e/suite/issuers/acme/certificaterequest:all-srcs",
         "//test/e2e/suite/issuers/acme/dnsproviders:all-srcs",
     ],
     tags = ["automanaged"],
