--- a/test/e2e/suite/issuers/acme/certificate/BUILD.bazel
+++ b/test/e2e/suite/issuers/acme/certificate/BUILD.bazel
@@ -3,8 +3,8 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 go_library(
     name = "go_default_library",
     srcs = [
-        "http01_ingress.go",
-        "http01_istio.go",
+        "dns01.go",
+        "http01.go",
         "notafter.go",
         "webhook.go",
     ],
@@ -16,11 +16,15 @@ go_library(
         "//pkg/apis/certmanager/v1:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
         "//pkg/client/clientset/versioned:go_default_library",
+        "//pkg/util:go_default_library",
         "//pkg/util/pki:go_default_library",
         "//test/e2e/framework:go_default_library",
+        "//test/e2e/framework/addon:go_default_library",
         "//test/e2e/framework/helper/featureset:go_default_library",
         "//test/e2e/framework/log:go_default_library",
+        "//test/e2e/framework/matcher:go_default_library",
         "//test/e2e/framework/util:go_default_library",
+        "//test/e2e/suite/issuers/acme/dnsproviders:go_default_library",
         "//test/e2e/util:go_default_library",
         "//test/unit/gen:go_default_library",
         "@com_github_onsi_ginkgo//:go_default_library",
