--- a/test/e2e/suite/issuers/acme/certificaterequest/BUILD.bazel
+++ b/test/e2e/suite/issuers/acme/certificaterequest/BUILD.bazel
@@ -3,33 +3,29 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 go_library(
     name = "go_default_library",
     srcs = [
-        "certificaterequests.go",
-        "certificates.go",
-        "helper.go",
-        "kubectl.go",
-        "pod_start.go",
-        "secret.go",
-        "validate.go",
+        "dns01.go",
+        "http01.go",
     ],
-    importpath = "github.com/jetstack/cert-manager/test/e2e/framework/helper",
-    tags = ["manual"],
+    importpath = "github.com/jetstack/cert-manager/test/e2e/suite/issuers/acme/certificaterequest",
     visibility = ["//visibility:public"],
     deps = [
-        "//pkg/api/util:go_default_library",
+        "//pkg/apis/acme/v1:go_default_library",
         "//pkg/apis/certmanager/v1:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
-        "//pkg/client/clientset/versioned:go_default_library",
         "//pkg/util:go_default_library",
-        "//pkg/util/pki:go_default_library",
-        "//test/e2e/framework/config:go_default_library",
-        "//test/e2e/framework/helper/featureset:go_default_library",
-        "//test/e2e/framework/helper/validations:go_default_library",
+        "//test/e2e/framework:go_default_library",
+        "//test/e2e/framework/addon:go_default_library",
         "//test/e2e/framework/log:go_default_library",
+        "//test/e2e/framework/matcher:go_default_library",
+        "//test/e2e/framework/util:go_default_library",
+        "//test/e2e/suite/issuers/acme/dnsproviders:go_default_library",
+        "//test/e2e/util:go_default_library",
+        "//test/unit/gen:go_default_library",
         "@com_github_onsi_ginkgo//:go_default_library",
+        "@com_github_onsi_gomega//:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/util/wait:go_default_library",
-        "@io_k8s_client_go//kubernetes:go_default_library",
     ],
 )
 
@@ -42,11 +38,7 @@ filegroup(
 
 filegroup(
     name = "all-srcs",
-    srcs = [
-        ":package-srcs",
-        "//test/e2e/framework/helper/featureset:all-srcs",
-        "//test/e2e/framework/helper/validations:all-srcs",
-    ],
+    srcs = [":package-srcs"],
     tags = ["automanaged"],
     visibility = ["//visibility:public"],
 )
